@@ -1,6 +1,8 @@
 Copyright (C) 2019 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_073119_1 - Now using an iterative model and Presentable class for the buffer to fill the view.
+
 saw_071719_1 - Beginning to introduce "typing" mode. More screen draw improvements.
 
 saw_071619_2 - Add keyword "end" to win_print_at().
